[package]
name = "bibget"
version = "1.1.1"
edition = "2024"
authors = ["Nathan Constantine-Cooke <nathan.constantine-cooke@ed.ac.uk>"]
license = "MIT OR Apache-2.0"
keywords = ["BibTeX", "Education", "Academic", "Bibliography", "Citations"]
categories = ["command-line-utilities"]
description = "CLI tool to generate a BibTex entry from a DOI"
readme = "README.md"
homepage = "https://github.com/nathansam/bibget"
repository = "https://github.com/nathansam/bibget"

[dependencies]
tokio = { version = "1.45.1", features = ["full"], default-features = false }
futures = { default-features = false, version = "0.3.31" }
doi2bib = "0.2.1"
clap = { version = "4.5.40", features = ["derive"] }


[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
assert_fs = "1.1.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
